# Parallel-Programming-Assignments

./: .gitignore  1910456_MirShafayatAhmed_Assignment.ipynb  CMakeLists.txt
MP0/: MP0.cu  MP0.ipynb
MP1/: MP1.cu  Readme.md  template.cu
MP2/: Readme.md
MP3/: MP3.cu  Readme.md
MP4/: MP4.cu  Readme.md  template.cu
